@@ -168,6 +168,8 @@ TIFFOutput::supports (const std::string &feature) const
 }
 
 
+#define ICC_PROFILE_ATTR "ICCProfile"
+
 
 bool
 TIFFOutput::open (const std::string &name, const ImageSpec &userspec,
@@ -319,6 +321,15 @@ TIFFOutput::open (const std::string &name, const ImageSpec &userspec,
                                mytm.tm_year+1900, mytm.tm_mon+1, mytm.tm_mday,
                                mytm.tm_hour, mytm.tm_min, mytm.tm_sec);
         m_spec.attribute ("DateTime", date);
+    }
+
+    // Write ICC profile, if we have anything
+    const ImageIOParameter* icc_profile_parameter = m_spec.find_attribute(ICC_PROFILE_ATTR);
+    if (icc_profile_parameter != NULL) {
+        unsigned char *icc_profile = (unsigned char*)icc_profile_parameter->data();
+        uint32 length = icc_profile_parameter->type().size();
+        if (icc_profile && length)
+            TIFFSetField (m_tif, TIFFTAG_ICCPROFILE, length, icc_profile);
     }
 
     if (Strutil::iequals (m_spec.get_string_attribute ("oiio:ColorSpace"), "sRGB"))
